# pyscan

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  test.py
src/cpp/bindings/: libpyscan.cpp
src/cpp/lib/: RectangleScan.cpp
src/cpp/lib/include/: Point.hpp  RectangleScan.hpp  Sampling.hpp
src/python/pyscan/: __init__.py  pyscan.py
