[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyscan"
version = "0.1.0"
description = "C++ spatial scan wrapper for Python"
requires-python = ">=3.8"
authors = [{ name = "Michael Matheny" }]
readme = "README.md"
license = { file = "LICENSE" }

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.packages = ["src/python/pyscan"]
cmake.version = ">=3.15"
cmake.source-dir = "."
cmake.build-type = "Release"
install.components = ["default"]
