[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyscan"
version = "0.1.0"
description = "C++ spatial scan wrapper for Python"
requires-python = ">=3.8"
authors = [{ name = "Michael Matheny" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "geopandas>=0.13.2",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pyqt6>=6.7.1",
    "shapely>=2.0.7",
]

[project.optional-dependencies]
dev = ["scikit-build-core", "cmake", "ninja", "pybind11", "pybind11-global"]

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.packages = ["src/python/pyscan"]
cmake.version = ">=3.5"
cmake.source-dir = "."
cmake.build-type = "Debug"
install.components = ["default"]
