[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyscan-stats"
version = "0.1.1"
description = "C++ spatial scan wrapper for Python"
requires-python = ">=3.8"
authors = [{ name = "Michael Matheny" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = ["scikit-build-core", "cmake", "ninja", "pybind11", "pybind11-global", "twine", "build", "cibuildwheel"]
utils = [
    "geopandas>=0.13.2",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pyqt6>=6.7.1",
    "shapely>=2.0.7",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.1.1",
    "h5netcdf>=1.6.3",
]

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.packages = ["src/python/pyscan"]
cmake.version = ">=3.5"
cmake.source-dir = "."
cmake.build-type = "Release"
install.components = ["default"]

[tool.cibuildwheel]
build = "cp3*-*"
skip = ["pp*", "*-musllinux*"]
test-skip = ["*"]

